media/css/m24/components/navigation-refresh.scss
/* ... */
// * -------------------------------------------------------------------------- */
// Menu panels

// Menu title (appears whether there is a panel or not)

.m24-c-menu-title {
    display: block;
    margin-bottom: $spacer-sm;

    @media #{$mq-md} {
        margin-bottom: 0;

        h2 {
            font-weight: inherit;
        }
    }
}

.m24-c-menu-panel {
    background-color: $color-white;
    color: $color-black;
    height: auto;
    overflow: hidden auto;
    width: 100%;
    z-index: 1000;
    @include border-box;

    @media #{$mq-md} {
        border: $border-width solid $m24-color-light-mid-gray;
        border-radius: 0 0 $border-radius-md $border-radius-md;
        left: 50%;
        margin: 0 auto;
        overflow: auto;
        padding: 0;
        position: absolute;
        right: auto;
        top: 100%;
        transform: translateX(-50%);
        width: 400px;

        .mzp-is-scrolling & {
            // copied from the parent .mzp-is-scrolling definition, but edited to move it down so it doesn't appear to hover over top of the parent menu
            box-shadow: 0 6px 6px 1px rgba(29, 17, 51, 0.04), 0 8px 8px $border-width rgba(9, 32, 77, 0.12), 0 5px 5px -3px rgba(29, 17, 51, 0.12);
        }
    }
}

.m24-mzp-is-basic .m24-c-menu-panel {
    display: block;

    @media #{$mq-md} {
        display: none;
    }
}

.m24-mzp-is-enhanced .m24-c-menu-panel {
    display: block;

    @media #{$mq-md} {
        display: none;
    }
}

.m24-c-menu-subtitle {
    color: $m24-color-dark-mid-gray;
    margin: 0;
    padding: $spacing-md 0 $spacing-sm;
}

.m24-mzp-l-content {
    margin-bottom: 0;
}

// wraps panel content
.m24-c-menu-panel-container {
    margin: 0 auto;
    max-width: $content-max;

    @media #{$mq-md} {
        padding: $spacer-lg 0;
    }
}

.m24-c-menu-panel-content.multi-column {
    @media #{$mq-md} {
        display: flex;
        padding: 0 $grid-margin;
        column-gap: $layout-lg;
        margin: 0 auto;
    }
}

.m24-c-menu-item-link {
    display: block;
    padding: 8px 0;

    li:last-child > & {
        padding-bottom: 0;
    }
}

// Menu panel close button shown on desktop sized view ports.
.m24-c-menu-button-close {
    @include bidi(((right, 15px, left, auto), (left, auto, right, 15px)));
    @include image-replaced;
    background: $color-white url('/media/protocol/img/icons/close.svg') center center no-repeat;
    @include background-size(20px, 20px);
    border: $border-width solid transparent;
    cursor: pointer;
    display: none;
    height: 24px;
    padding: var(--spacer-xs);
    position: absolute;
    top: 15px;
    width: 24px;
    transition: border-color $fast $bezier;

    &:hover,
    &:focus {
        border-color: $m24-color-mid-gray;
    }
}

// page content - hide all content except for the nav when mobile nav menu is open
// This is not part of Protocol, it is specific to Springfield; should be documented in future
body:has(.m24-c-navigation-items.mzp-is-open) {
    & > .m24-pencil-banner,
    & > .c-sub-navigation,
    & > .mzp-c-breadcrumb,
    & > .moz-consent-banner.is-visible,
    & > .c-banner.c-banner-is-visible,
    & > #outer-wrapper {
        display: none !important; /* stylelint-disable-line declaration-no-important */

        @media #{$mq-md} {
            display: block !important; /* stylelint-disable-line declaration-no-important */
        }
    }
}


// * -------------------------------------------------------------------------- */
// Download button

.m24-navigation { /* stylelint-disable-line no-duplicate-selectors */
    .mzp-c-button-download-container {
        margin-bottom: 0;

        // don't show the unsupported message, just hide download button
        .fx-unsupported & {
            display: none;
        }
    }

    // hide privacy link
    .mzp-c-button-download-privacy-link {
        display: none;
    }
}

// displays on mobile
.m24-c-menu-download {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    display: block;
    background-color: $color-white;
    border-top: 1px solid $m24-color-light-mid-gray;
    padding: $spacing-md;
    z-index: 1000;

    .mzp-c-button-download-container {
        display: block;
        box-sizing: border-box;
        width: 100%;
    }

    .download-link {
        width: 100%;
    }

    @media #{$mq-md} {
        display: none;
    }
}

// displays on desktop
.mzp-c-navigation-download {
    display: none;

    @media #{$mq-md} {
        display: inline-block;
    }
}

